--- a/jb_global/package.json
+++ b/jb_global/package.json
@@ -1,10 +1,8 @@
 {
   "name": "jb_global",
   "type": "module",
-  "dependencies": {
-    "just_bun-asm": "file:../just_bun-asm"
-  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "just_bun-asm": "file:../just_bun-asm"
   }
 }
